added a test for lessonRequest apis
